[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
md5 = "0.7.0"
regex = "1.7.0"
